fixed chevron alignment

--- a/src/style/Navigation/Navigation.scss
+++ b/src/style/Navigation/Navigation.scss
@@ -47,6 +47,7 @@
       background-color: inherit;
       cursor: pointer;
       display: flex;
+      align-items: center;
 
       @include breakpoint(mobile) {
         /* margin important for vertical align on mobile phones */
